k8s/kubeflow/app/resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-pipelines
  namespace: kubeflow
spec:
  ingressClassName: nginx
  rules:
    - host: pipelines.wexler.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-pipeline-ui
                port:
                  number: 80
